--- a/src/components/Alll.css
+++ b/src/components/Alll.css
@@ -8,9 +8,16 @@
 }
 
 .logos{
-	width: 200px;
-	height: 200px;
+	width: 180px;
+	height: 180px;
+	
 }
+.logoss{
+	width: 50px;
+	height: 50px;
+	
+}
+
 
 
 .navas{
